[package]
name = "crypto-market-integration"
version = "2.11.2"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-crawler = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
crypto-markets = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
crypto-market-type = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
# crypto-msg-parser = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
crypto-msg-type = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
crypto-pair = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
crypto-rest-client = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
crypto-ws-client = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
redis = "0.21.5"
reopen = { version = "1.0.3", features = ["signals"] }
serde_json = "1.0.81"
signal-hook = { version = "0.3.14", features = ["extended-siginfo"] }
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
slack-hook = "0.8.0"
openssl = { version = "0.10", features = ["vendored"] }
nanomsg = "0.7.2"
chrono = "0.4.19"
wmjtyd-libstock = { git = "https://github.com/wmjtyd/libstock", branch="staging-0.3.0b2" }


rust_decimal = "1.23.1"
rust_decimal_macros = "1.23.1"
phf = { version = "0.10.1", features = ["macros"] }
futures = "0.3.21"

clap = "~2.27.0"

[dependencies.crypto-msg-parser]
version = "=2.4.12"
optional = true
git = "https://github.com/wmjtyd/crypto-crawler-rs"
rev = "d45528283b387bbe6c46507d7837bf1dd229ff6d"

[features]
default = ["crypto"]
crypto = ["dep:crypto-msg-parser"]