[package]
name = "crypto-market-integration"
version = "2.11.2"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.21"

clap = "~2.27.1"
crypto-crawler = "4.5.13"
crypto-msg-parser = "2.7.3"
crypto-ws-client = "4.11.10"
env_logger = "0.9.0"
futures = "0.3.21"
lazy_static = "1.4.0"
log = "0.4.17"
rust_decimal = "1.26.1"
serde_json = "1.0.83"
slack-hook = "0.8.0"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }

[dependencies.wmjtyd-libstock]
git = "https://github.com/wmjtyd/libstock.git"
# default-features = false
# features = ["crypto", "zeromq", "slack"]
branch = "develop"
