[package]
name = "crypto-market-multicast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net2 = "0.2"
clap = "~2.27.1"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
notify = "5.0.0-pre.15"
log = { version = "0.4.17", features = ["std"] }
tracing = "0.1.36"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
anyhow = { version = "1.0.60", features = ["backtrace"] }
arcstr = { version = "1.1.4", features = ["serde"] }
crossbeam-channel = "0.5.6"
tracing-subscriber = "0.3.15"


[dependencies.wmjtyd-libstock]
git = "https://github.com/wmjtyd/libstock.git"
default-features = false
features = ["crypto", "zeromq", "slack"]
