[package]
name = "crypto-market-publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = "0.14.0"
mio = { version = "0.8", features = ["net", "os-poll"] }
ring = "0.16"
lazy_static = "1"
log = { version = "0.4", features = ["std"] }
nanomsg = "0.7.2"
tokio = { version = "0.2", features = ["full"] }
clap = "~2.27.0"
env_logger = "0.4.3"
url = "1"
rustls = "0.20.6"
wmjtyd-libstock = { git = "https://github.com/wmjtyd/libstock", branch="staging-0.3.0b2" }

[dependencies.crypto-msg-parser]
version = "=2.4.12"
optional = true
git = "https://github.com/wmjtyd/crypto-crawler-rs"
rev = "bb8d89563e6add82a0825f7b2a47d58c42d423cc"

[features]
default = ["crypto"]
crypto = ["dep:crypto-msg-parser"]