[package]
name = "crypto-market-publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = "0.14.0"
mio = { version = "0.8", features = ["net", "os-poll"] }
ring = "0.16"
lazy_static = "1"
log = { version = "0.4", features = ["std"] }
tokio = { version = "1.18.2", features = ["rt-multi-thread",  "time", "sync", "macros"] }
clap = "~2.27.0"
env_logger = "0.4.3"
url = "1"
rustls = "0.20.6"

[dependencies.crypto-msg-parser]
version = "=2.6.2"
git = "https://github.com/wmjtyd/crypto-crawler-rs"
rev = "d41482af5fc33797ee12c54da809b660850d2ab2"

[dependencies.wmjtyd-libstock]
git = "https://github.com/wmjtyd/libstock.git"
default-features = false
features = ["crypto", "zeromq", "slack"]
