[package]
name = "crypto-market-publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = "0.14.0"
mio = { version = "0.8", features = ["net", "os-poll"] }
ring = "0.16"
lazy_static = "1"
log = { version = "0.4", features = ["std"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread",  "time", "sync", "macros"] }
clap = "~2.27.1"
env_logger = "0.4.3"
url = "2"

[dependencies.wmjtyd-libstock]
git = "https://github.com/wmjtyd/libstock.git"
default-features = false
features = ["crypto", "zeromq", "slack"]
branch = "develop"
