[package]
name = "crypto-market-recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.83"
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
slack-hook = "0.8.0"
chrono = "0.4.21"
clap = "~2.27.1"

rust_decimal = "1.26.1"
futures = "0.3.21"
tracing = "0.1.36"
concat-string = "1.0.1"
thiserror = "1.0.32"

[dependencies.wmjtyd-libstock]
git = "https://github.com/wmjtyd/libstock.git"
default-features = false
features = ["crypto", "zeromq", "slack"]
branch = "develop"

[dev-dependencies]
tracing-subscriber = "0.3.15"
