[package]
name = "crypto-market-replay"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum =  { version = "0.5.15", features = ["headers","ws"] }
chrono = "0.4.22"
crypto-crawler = "4.5.13"
crypto-msg-parser = "2.7.3"
futures = "0.3.23"
headers = "0.3.7"
rand = "0.8.5"
rust_decimal = "1.26.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_derive = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = "0.7.3"
toml = "0.5.9"
tower-http = { version = "0.3.4", features = ["fs", "trace"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
anyhow = { version = "1.0.58", features = ["backtrace"] }
notify = "5.0.0-pre.15"
arcstr = { version = "1.1.4", features = ["serde"] }
base64 = "0.12.1"
clap = "~2.27.0"

[dependencies.wmjtyd-libstock]
git = "https://github.com/wmjtyd/libstock.git"
default-features = false
features = ["crypto", "zeromq", "slack"]
branch = "develop"

